--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ function mostrarSoloPaso(id) {
           <div class="form-group">
             <label for="direccionTransporte">Dirección</label>
             <select id="direccionTransporte" required>
-              <option value="upstream">Upstream</option>
-              <option value="downstream">Downstream</option>
+              <option value="upstream">Materia prima</option>
+              <option value="downstream">Producto terminado</option>
             </select>
           </div>
           <div class="form-group">
